k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
  labels:
    app: catalog-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-service
  template:
    metadata:
      labels:
        app: catalog-service
    spec:
      containers:
        - name: catalog-service
          image: catalog-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9001
          volumeMounts:
            - name: catalog-config-volume
              mountPath: /workspace/config
          lifecycle:
            preStop:
              exec:
                command: [ 'sh', '-c', 'sleep 5' ]
      volumes:
        - name: catalog-config-volume
          configMap:
            name: catalog-config
