k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  labels:
    app: catalog-service

spec:
  type: ClusterIP
  selector:
    app: catalog-service
  ports:
    - protocol: TCP
      port: 9001
      targetPort: 9001
